# ME-Capstone-Team-4

./: .env.example  .gitignore  README.md  requirements.txt  utils.py
arduino/motor_test/: motor_test.ino
arduino/motor_test_L298N/: motor_test_L298N.ino
control/: test_arduino_serial_drive.py  test_gripper.py  test_magnet.py
control/arduino_motor_serial/: arduino_motor_serial.ino
control/motor_move/: motor_move_gpiozero.py
data/scripts/: extract_frames.py
docker/: Dockerfile
docs/: alignment_plan.md  prompts.md  purchase_list.md  state_machine.md  state_machine.txt  team_rpi
firmware/motor_test_L298N/: motor_test_L298N.ino
misc/roboflow/: label.py  results_phone1.jsonl
misc/ros2/: running_docker.md
misc/ros2/ros2_ws/src/capstone_robot/: package.xml  setup.cfg  setup.py
misc/ros2/ros2_ws/src/capstone_robot/capstone_robot/: state_machine_node.py
misc/testing/: test_picam.py  test_usb.py
misc/yolo-picam/: yolo-torch-to-ncnn.py
scripts/: export_yolo_model.py  record_video.py  rotate.py  run_aicamera_detection.py  run_picamera.py  run_video_detection.py  test.py
scripts/control/: test.py  test_gripper.py  test_magnet.py
scripts/vision/: detect_pole.py  detect_usb.py  pole_track_cv_usb.py  pole_tracker_pi.py  record_roboflow.py  record_video.py  run_ncnn_video.py  run_ncnn_video_rpi.py  split_data.py  yolo-torch-to-ncnn.py
src/capstone_robot/: README.md  utils.py  vision_centerlines.py
train/: train.py  train.sh
vision/: approach_pole_opencv.py  approach_pole_yolo_serial.py
yolo-picam/: picam.py  yolo-ncnn-picam.py
(+947 files in other folders)
