<?xml version="1.0"?>
<package format="3">
  <name>capstone_robot</name>
  <version>0.0.1</version>
  <description>ROS2 nodes for the capstone pole-climbing robot.</description>
  <maintainer email="team@example.com">Capstone Team</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
